# zed

./: Cargo.toml
.zed/: tasks.json
assets/settings/: default.json
crates/git_ui/src/: project_diff.rs
crates/project/src/git_store/: branch_diff.rs
crates/review_ui/: Cargo.toml
crates/review_ui/src/: comment_card.rs  file_list.rs  github_provider.rs  github_token.rs  inline_comment.rs  pull_request_list.rs  review_panel.rs  review_panel_settings.rs  review_provider.rs  review_ui.rs  review_view.rs  test_support.rs
crates/settings/src/: vscode_import.rs
crates/settings_content/src/: settings_content.rs
crates/zed/: Cargo.toml
crates/zed/src/: main.rs  visual_test_runner.rs  zed.rs
crates/zed_actions/src/: lib.rs
docs/plans/: review-panel.md
