[package]
name = "review_ui"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/review_ui.rs"
doctest = false

[dependencies]
anyhow.workspace = true
fs.workspace = true
gpui.workspace = true
schemars.workspace = true
serde.workspace = true
settings.workspace = true
ui.workspace = true
workspace.workspace = true
zed_actions.workspace = true
menu.workspace = true
project.workspace = true
git.workspace = true
